@@ -2183,6 +2183,12 @@ password=P@ssW0rd!
                 <td>No</td>
                 <td>used for authentication.</td>
             </tr>
+            <tr>
+                <td>checkExternals</td>
+                <td>No</td>
+                <td>whether any subversion externals this project uses should also
+                be checked for modifications.</td>
+            </tr>            
             </tbody>
         </table>
         </div>
